[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["Michael Adler <michael.adler@siemens.com>"]
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
log = { version = "0.4.0", features = ["release_max_level_warn"] }
env_logger = { version = "0.10.0", default-features=false, features = ["color", "auto-color", "humantime"] }
ahash = "0.8"
arrayvec = "0.7.2"
binary-heap-plus = "0.5.0"
advent-of-code-ocr = "0.1.1"

[dependencies.aoc-lib]
git = "https://github.com/michaeladler/aoc-lib.git"

[dev-dependencies]
criterion = "0.4"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
lto = "fat"       # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic

[[bench]]
name = "benchmarks"
harness = false
